WebConfig aktualisiert